--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
           <span><%= "ユーザー名" %>
             <ul class="user__info">
               <li>
-                <%= link_to "マイページ", "/users/#{current_user.id}" %>
+                <%= link_to "マイページ", "#" %>
                 <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
               </li>
             </ul>
@@ -27,8 +27,8 @@
           </div>
         <% else %>
           <div class="grid-6">
-            <%= link_to "ログイン", "#", class: "post" %>
-            <%= link_to "新規登録", "#", class: "post" %>
+            <%= link_to "ログイン", new_user_session_path, class: "post" %>
+            <%= link_to "新規登録", new_user_registration_path, class: "post" %>
           </div>
         <% end %> 
       </div>
