--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,15 +15,15 @@
         <h1 class="grid-6"><a href="/"><b>Travellers</b></a></h1>
         <% if user_signed_in? %>
           <div class="user_nav grid-6">
-          <span><%= "ユーザー名" %>
+          <span><%= current_user.nickname %>
             <ul class="user__info">
               <li>
-                <%= link_to "マイページ", "#" %>
+                <%#<%= link_to "マイページ", "#" %>
                 <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
               </li>
             </ul>
           </span>
-            <%= link_to "投稿する", new_tweet_path, class: "post" %>
+            <%= link_to "投稿する", "#", class: "post" %>
           </div>
         <% else %>
           <div class="grid-6">
