--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="https://kit.fontawesome.com/484e6509e8.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -23,7 +24,7 @@
               </li>
             </ul>
           </span>
-            <%= link_to "投稿する", "#", class: "post" %>
+            <%= link_to "投稿する", new_post_path, class: "post" %>
           </div>
         <% else %>
           <div class="grid-6">
