--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
-<%= form_with(url: "#", local: true, method: :get, class: "search-form") do |form| %>
-  <%# <%= form.collection_select(:hoge, [], :hoge, :hoge, {}, {class:"select-box", id:"erea-category"}) %> 
-  <%= form.text_field :keyword, placeholder: "投稿を検索する", class: "search-input" %>
-  <%= form.submit "検索", class: "search-btn" %>
+<%= form_with(url: "#", local: true, method: :get, class: "search-form") do |f| %>
+  <%# <%= f.collection_select(:hoge, [], :hoge, :hoge, {}, {class:"select-box", id:"erea-category"}) %> 
+  <%= f.text_field :keyword, placeholder: "投稿を検索する", class: "search-input" %>
+  <%= f.submit "検索", class: "search-btn" %>
 <% end %>
 <div class="contents row">
   <%# 投稿の表示 %>
