詳細表示画面

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,7 +14,7 @@
           <span>投稿者</span><%= "(ユーザー名)" %>
       </span>
     </div>
-    <div class="content_bottom">
+    <div class="content-bottom">
       <div class="travel-title"><%= "(旅先名)" %></div>
       <div class="star-rating mb-2">
         <div class="star-rating-front" style="width: <%= "#" %>%">★★★★★</div>
