--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1050,7 +1050,7 @@ footer p {
 
 .search-form {
   text-align: center;
-  padding-top: 80px;
+  padding-top: 0px;
 }
 
 .search-form .search-input {
@@ -1073,16 +1073,41 @@ footer p {
   left: 0;
   width: 100%;
   height: 100%;
-  /* text-indent:-999px; */
   z-index: 2;
 }
 
-.content_bottom {
+.content-bottom {
   display: flex;
   justify-content: space-between;
   border-bottom: lightgray solid 8px;
   padding-bottom: 40px;
   margin-bottom: 40px;
+}
+
+.show-content {
+  padding: 20px;
+  margin-bottom: 40px;
+  background-color: white;
+  // box-shadow: 0 0 10px rgba(41, 41, 41, 0.2);
+  // border: double black 15px;
+  border-top: solid 5px #5d627b;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.22);
+}
+
+.show-content-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.show-content-center {
+  display: flex;
+  justify-content: space-between;
+}
+
+.show-content-bottom {
+  margin-top: 15px;
+  font-size: 20px;
 }
 
 .travel-title {
