--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -23,7 +23,7 @@
       <div class="weight-bold-text mt-5">
        【必須】評価
       </div>
-      <div class="rating-box mt-3">
+      <div class="rating-box mt-3 mb-5">
         <div class="main-rating">
           <div class="ratings mb-3">
             <span class="fa fa-star-o" id="star"></span>
