--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <h2>Sign up</h2>
     <%= form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
-      <%= devise_error_messages! %>
+      <%= render partial:'shared/error_messages', model: f.object ,locals: { model: @user }%>
 
       <div class="field">
         <%= f.label :nickname %> <em>(最大6文字)</em><br />
