--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,7 +6,7 @@
       <span><%= image_tag 'arrow_top.png' %></span>
       <ul class="more_list">
         <li>
-          <%= link_to '編集', "#", method: :get %>
+          <%= link_to '編集', edit_post_path(@post.id), method: :get %>
         </li>
         <li>
           <%= link_to '削除', "#", method: :delete %>
