--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,7 +9,7 @@
           <%= link_to '編集', edit_post_path(@post.id), method: :get %>
         </li>
         <li>
-          <%= link_to '削除', "#", method: :delete %>
+          <%= link_to '削除', "#", method: :delete, data: { confirm: '削除しますか？' }%>
         </li>
       </ul>
     </div>
