エラー文日本語化

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -39,6 +39,9 @@
         <%= "１０文字１０文字１０" %>
         <% end %>
       </div>
+      <div class="content-date has-text-right">
+        <%= "投稿日：2021/*/*" %>
+      </div>
     </div>
   </div>
 
