--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,7 +17,7 @@
       <div class="field">
         <%= f.label :"パスワード" %>
         <% if @minimum_password_length %>
-          <em>(最大<%= @minimum_password_length %> 文字)</em>
+          <em>(<%= @minimum_password_length %>文字以上、半角英数字混合)</em>
         <% end %><br />
         <%= f.password_field :password, autocomplete: "off" %>
       </div>
@@ -28,7 +28,7 @@
       </div>
 
       <div class="actions">
-        <%= f.submit "Sign up" %>
+        <%= f.submit "新規登録" %>
       </div>
     <% end %>
   </div>
