ストロングパラメータの設定

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -18,7 +18,7 @@
       <div class="weight-bold-text mb-2">
        【必須】都道府県
       </div>
-      <%= f.collection_select(:hoge, [], :hoge, :hoge, {}, {class:"select-box", id:"erea-category"}) %>
+      <%= f.collection_select(:area_id, [], :hoge, :hoge, {}, {class:"select-box", id:"erea-category"}) %>
 
       <div class="weight-bold-text mt-5">
        【必須】評価
