バリデーション設定

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,6 @@
 <div class="contents row">
   <div class="container">
     <h3><b>投稿する</b></h3>
-  <%= render partial: "form" , locals: { post: @post} %>
+  <%= render partial: "form"  %>
   </div>
 </div>
