--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <h2>新規登録</h2>
     <%= form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
-      <%= render partial:'shared/error_messages', model: f.object ,locals: { model: @user }%>
+      <%= render 'shared/error_messages', model: f.object %>
 
       <div class="field">
         <%= f.label :"ニックネーム" %> <em>(最大6文字)</em><br />
