--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,5 +1,5 @@
     <%= form_with(model: @post, local: true) do |f| %>
-      <%= render partial:'shared/error_messages', model: f.object ,locals: { model: @post }%>
+      <%= render 'shared/error_messages', model: f.object %>
       <div class="weight-bold-text">
        【必須】投稿画像
       </div>
