--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -957,6 +957,8 @@ div.contents.row div.content_post span.name {
   bottom: 30px;
   z-index: 2;
   font-size: 13px;
+  text-shadow: 0 0 2px #000, 0 0 1px #000, 0 0 1px #000;
+
 }
 
 div.contents.row div.content_post span.name a {
