詳細表示ページリンク

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,7 +6,7 @@
 <div class="contents row">
   <%# 投稿の表示 %>
   <% @posts.each do |post| %> <%#  後で変える %>
-    <%= link_to "#" do %>
+    <%= link_to post_path(post.id) do %>
     <div class="content_post" >
     <%= image_tag post.image, class: "item-img" %>
       <p><%= post.area.name %></p>
