--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,8 +4,7 @@
   <%= f.submit "検索", class: "search-btn" %>
 <% end %>
 <div class="contents row">
-  <%# 投稿の表示 %>
-  <% @posts.each do |post| %> <%#  後で変える %>
+  <% @posts.each do |post| %> 
     <%= link_to post_path(post.id) do %>
     <div class="content_post" >
     <%= image_tag post.image, class: "item-img" %>
