--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -38,7 +38,7 @@
         <%= @post.text %>
       </div>
       <div class="content-date has-text-right">
-        <%= @post.created_at %>
+        <%= l @post.created_at, format: :date %>
       </div>
     </div>
   </div>
