--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -36,9 +36,9 @@
     <div class="show-content-bottom">
       <div class="content-text">
         <%= safe_join(@post.text.split("\n"), tag.br) %>
-        <%#= @post.text %>
       </div>
       <div class="content-date has-text-right">
+        <span>投稿日:</span>
         <%= l @post.created_at, format: :date %>
       </div>
     </div>
