destroyアクションの記入

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -36,5 +36,5 @@
         </div>
         <%= f.hidden_field :score, id: "rating-value" %>
       </div>
-      <%= f.submit "SEND" %>
+      <%= f.submit "送信" %>
     <% end %>
