--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -28,7 +28,7 @@
     <div class="show-content-center">
       <div class="travel-title"><%= @post.title %></div>
       <div class="star-rating mb-2">
-        <div class="star-rating-front" style="width: <%= "#" %>%">★★★★★</div>
+        <div class="star-rating-front" style="width: <%= @post.score.round(1).to_f*100/5 %>%">★★★★★</div>
         <div class="star-rating-back">★★★★★</div>
       </div>
     </div>
