--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -742,7 +742,7 @@ header.header div.header__bar.row div.grid-6 a.post:hover {
 header.header {
   padding: 10px;
   border-bottom: 1px solid #D8D8D8;
-  background-color: rgba(225, 239, 241, 0.87);
+  background-color: rgb(225, 239, 241);
   position: fixed;
   top: 0;
   left: 0;
