--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -46,9 +46,9 @@
 
   <div class="container">
     <% if user_signed_in? %>
-      <%= form_with( local: true) do |form| %>
-        <%= form.text_area :text, placeholder: "コメントする", rows: "2" %>
-        <%= form.submit "SEND" %>
+      <%= form_with(model: @comment,url: post_comments_path(@post.id), local: true) do |f| %>
+        <%= f.text_area :text, placeholder: "コメントする", rows: "2" %>
+        <%= f.submit "SEND" %>
       <% end %>
     <% else %>
       <strong><p>※※※ コメントの投稿には新規登録/ログインが必要です ※※※</p></strong>
