--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,22 +5,6 @@
 <% end %>
 <div class="contents row">
   <% @posts.each do |post| %> 
-    <%= link_to post_path(post.id) do %>
-    <div class="content_post" >
-    <%= image_tag post.image, class: "item-img" %>
-      <p><%= post.area.name %></p>
-      <span class="name">
-          <span>投稿者</span><%= post.user.nickname %>
-      </span>
-    </div>
-    <div class="content-bottom">
-      <div class="travel-title"><%= post.title %></div>
-      <div class="star-rating mb-2">
-        <div class="star-rating-front" style="width: <%= post.score*100/5 %>%">★★★★★</div>
-        <div class="star-rating-back">★★★★★</div>
-      </div>
-    </div>
-    <% end %>
-    
+    <%= render partial: "post", locals: { post: post } %>
   <% end %>
 </div>
