--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,5 @@
-<%= form_with(url: search_posts_path, local: true, method: :get, class: "search-form") do |f| %>
-  <%# <%= f.collection_select(:hoge, [], :hoge, :hoge, {}, {class:"select-box", id:"erea-category"}) %> 
-  <%= f.text_field :keyword, placeholder: "投稿を検索する", class: "search-input" %>
-  <%= f.submit "検索", class: "search-btn" %>
-<% end %>
+<%= render partial: "search" %>
+
 <div class="contents row">
   <% @posts.each do |post| %> 
     <%= render partial: "post", locals: { post: post } %>
