検索フォームテンプレート化

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1069,6 +1069,18 @@ footer p {
   height: 35px;
 }
 
+.contents-header{
+  font-size: 20px;
+  text-align: center;
+}
+
+.search-error{
+  text-align: center;
+  font-size: 20px;
+  color: red;
+  margin-top: 10px;
+}
+
 .item-img {
   position: absolute;
   top: 0;
