--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
     <%= yield %>
     <footer>
       <p>
-        Copyright  Travellers Review 2021.
+        Copyright  Travellers 2021.
       </p>
     </footer>
   </body>
