--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,8 @@
-<%= render partial: "search" %>
+<%= render partial: "search-form" %>
+
+<div class="contents-header">
+＜投稿一覧＞
+</div>
 
 <div class="contents row">
   <% @posts.each do |post| %> 
