--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -1,7 +1,28 @@
-<%= render partial: "search" %>
+<%= render partial: "search-form" %>
+
+<div class="contents-header">
+  ＜検索結果＞
+  <div>
+    キーワード:<%= params[:keyword] %>
+  </div>
+  <div>
+    都道府県:
+    <% @posts.each do |post| %>
+      <%= post.area.name %>
+      <% break %>
+    <% end %>
+  </div>
+</div>
+
 
 <div class="contents row">
-  <% @posts.each do |post| %>
-    <%= render partial: "post", locals: { post: post } %>
+  <% if @posts.present? %>
+    <% @posts.each do |post| %>
+      <%= render partial: "post", locals: { post: post } %>
+    <% end %>
+  <% else %>
+    <div class="search-error">
+      ⚠該当する検索結果はありません⚠
+    </div>
   <% end %>
 </div>
