--- a/app/views/posts/_search-form.html.erb
+++ b/app/views/posts/_search-form.html.erb
@@ -1,7 +1,9 @@
 <%= form_with(url: search_posts_path, local: true, method: :get, class: "search-form") do |f| %>
   <%= "都道府県:" %>
-  <%= f.collection_select(:area_id, Area.all, :id, :name, {}, {class:"select-box", id:"erea-category"}) %>
+  <%= f.collection_select(:area_id, Area.all, :id, :name, {}, {class:"select-box"}) %>
   <%= "キーワード:" %>
   <%= f.text_field :keyword,placeholder: "投稿を検索する", class: "search-input" %>
+  <div id="search-result">
+  </div>
   <%= f.submit "検索", class: "search-btn" %>
 <% end %>
