--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -2,16 +2,20 @@
 
 <div class="contents-header">
   ＜検索結果＞
-  <div>
-    キーワード:<%= params[:keyword] %>
-  </div>
-  <div>
-    都道府県:
-    <% @posts.each do |post| %>
-      <%= post.area.name %>
-      <% break %>
-    <% end %>
-  </div>
+  <% if params[:keyword] != "" %>
+    <div>
+      キーワード:<%= params[:keyword] %>
+    </div>
+  <% end %>
+  <% if params[:area_id] != "1" %>
+    <div>
+      都道府県:
+      <% @posts.each do |post| %>
+        <%= post.area.name %>
+        <% break %>
+      <% end %>
+    </div>
+  <% end %>
 </div>
 
 
