jsファイルコメント追記

--- a/app/views/posts/_search-form.html.erb
+++ b/app/views/posts/_search-form.html.erb
@@ -1,9 +1,15 @@
 <%= form_with(url: search_posts_path, local: true, method: :get, class: "search-form") do |f| %>
-  <%= "都道府県:" %>
-  <%= f.collection_select(:area_id, Area.all, :id, :name, {}, {class:"select-box"}) %>
-  <%= "キーワード:" %>
-  <%= f.text_field :keyword,placeholder: "投稿を検索する", class: "search-input" %>
-  <div id="search-result">
+  <div>
+    <%= "都道府県:" %>
+    <%= f.collection_select(:area_id, Area.all, :id, :name, {}, {class:"select-box"}) %>
   </div>
-  <%= f.submit "検索", class: "search-btn" %>
+  <div>
+    <%= "キーワード:" %>
+    <%= f.text_field :keyword,placeholder: "投稿を検索する", class: "search-input", id: "search-input" %>
+    <div id="search-result">
+    </div>
+  </div>
+  <span>
+    <%= f.submit "検索", class: "search-btn" %>
+  </span>
 <% end %>
