--- a/app/views/posts/_search-form.html.erb
+++ b/app/views/posts/_search-form.html.erb
@@ -1,4 +1,5 @@
 <%= form_with(url: search_posts_path, local: true, method: :get, class: "search-form") do |f| %>
+  <div class="contents-header mb-3 has-text-left"><u>＜検索＞</u></div>
   <%= f.label :name, "都道府県"%>
   <%= f.collection_select(:area_id, Area.all, :id, :name, {}, {class:"select-box"}) %><br>
   <%= f.label :name, "キーワード"%>
