--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 <%= render partial: "search-form" %>
 
 <div class="contents-header">
-＜投稿一覧＞
+  <u>＜投稿一覧＞</u>
 </div>
 
 <div class="contents row">
