--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -1,12 +1,7 @@
 <%= render partial: "search-form" %>
 
 <div class="contents-header">
-  ＜検索結果＞
-  <% if params[:keyword] != "" %>
-    <div>
-      キーワード:<%= params[:keyword] %>
-    </div>
-  <% end %>
+  <u>＜検索結果＞</u>
   <% if params[:area_id] != "1" %>
     <div>
       都道府県:
@@ -14,6 +9,11 @@
         <%= post.area.name %>
         <% break %>
       <% end %>
+    </div>
+  <% end %>
+  <% if params[:keyword] != "" %>
+    <div>
+      キーワード:<%= params[:keyword] %>
     </div>
   <% end %>
 </div>
