検索都道府県追加

--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -4,11 +4,7 @@
   <u>＜検索結果＞</u>
   <% if params[:area_id] != "1" %>
     <div>
-      都道府県:
-      <% @posts.each do |post| %>
-        <%= post.area.name %>
-        <% break %>
-      <% end %>
+      都道府県:<%= @area.name %>
     </div>
   <% end %>
   <% if params[:keyword] != "" %>
