--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1095,8 +1095,12 @@ footer p {
   width: 23%;
   font-size: 15px;
   top: 400px;
-  right: 10px;
-  background-color: chartreuse;
+  right: 13px;
+  box-shadow: 0 0 10px rgba(41, 41, 41, 0.2);
+  background-color: white;
+  box-sizing: border-box;
+  padding-left: 10px;
+  padding-bottom: 10px;
 }
 
 .output-title{
