--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,35 +4,37 @@
   <u>＜投稿一覧＞</u>
 </div>
 
-<div class="search-output">
-  <div class="contents-header">
-    <u>＜検索情報＞</u>
-  </div>
-  <div class="output-title">
-    都道府県:<%= "hokkaido" %>   <%# 表示分岐作成 %>
-  </div>
-  <div class="output-title">
-    キーワード:<%= "keyword" %>  <%# 表示分岐作成 %>
-  </div>
-  <div class="output-title mt-3">
-    検索件数:<%= "###" %>件
-  </div>
-  <div class="output-title">
-    平均評価
-  </div>
-  <div class="average-score">
-    <div class="star-rating">
-      <div class="star-rating-front" style="width: <%= 50 %>%">★★★★★</div>
-      <div class="star-rating-back">★★★★★</div>
+<%# if @posts == nil %>
+<% if current_page?(root_path) %>
+  <div class="search-output">
+    <div class="contents-header">
+      <u>＜検索情報＞</u>
     </div>
-    <div class="average-score-display">
-      <%= "###" %>点
+    <div class="output-title">
+      <strong>↓検索時に表示されます↓</strong><br>
+      都道府県:<%= "〇〇県" %><br>   <%# 表示分岐作成 %>
+      キーワード:<%= "〜〜〜〜〜" %>  <%# 表示分岐作成 %>
+    </div>
+    <div class="output-title mt-3">
+      検索件数:<%= "###" %>件<br>
+      平均評価
+    </div>
+    <div class="average-score">
+      <div class="star-rating">
+        <div class="star-rating-front" style="width: <%= 0 %>%">★★★★★</div>
+        <div class="star-rating-back">★★★★★</div>
+      </div>
+      <div class="average-score-display">
+        <%= "#.##" %>点
+      </div>
     </div>
   </div>
-</div>
+<% end %>
 
-<div class="contents row">
-  <% @posts.each do |post| %> 
-    <%= render partial: "post", locals: { post: post } %>
-  <% end %>
-</div>
+<% if @posts != nil %>
+  <div class="contents row">
+    <% @posts.each do |post| %> 
+      <%= render partial: "post", locals: { post: post } %>
+    <% end %>
+  </div>
+<% end %>
