検索表示の部分テンプレ化

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,32 +4,7 @@
   <u>＜投稿一覧＞</u>
 </div>
 
-<%# if @posts == nil %>
-<% if current_page?(root_path) %>
-  <div class="search-output">
-    <div class="contents-header">
-      <u>＜検索情報＞</u>
-    </div>
-    <div class="output-title">
-      <strong>↓検索時に表示されます↓</strong><br>
-      都道府県:<%= "〇〇県" %><br>   <%# 表示分岐作成 %>
-      キーワード:<%= "〜〜〜〜〜" %>  <%# 表示分岐作成 %>
-    </div>
-    <div class="output-title mt-3">
-      検索件数:<%= "###" %>件<br>
-      平均評価
-    </div>
-    <div class="average-score">
-      <div class="star-rating">
-        <div class="star-rating-front" style="width: <%= 0 %>%">★★★★★</div>
-        <div class="star-rating-back">★★★★★</div>
-      </div>
-      <div class="average-score-display">
-        <%= "#.##" %>点
-      </div>
-    </div>
-  </div>
-<% end %>
+<%= render partial: "search-output" %>
 
 <% if @posts != nil %>
   <div class="contents row">
