検索件数の取得

--- a/app/views/posts/_search-output.html.erb
+++ b/app/views/posts/_search-output.html.erb
@@ -45,7 +45,7 @@
       <% end %>
     </div>
     <div class="output-title mt-3">
-      検索件数:<%= "###" %>件<br>
+      検索件数:<%= @posts.length %>件<br>
       平均評価
     </div>
     <div class="average-score">
