--- a/app/views/posts/_search-form.html.erb
+++ b/app/views/posts/_search-form.html.erb
@@ -1,16 +1,9 @@
 <%= form_with(url: search_posts_path, local: true, method: :get, class: "search-form") do |f| %>
   <div class="contents-header mb-3 has-text-left"><u>＜検索＞</u></div>
-  <% if current_page?(search_posts_path) %>
-    <%= render partial: "sort", locals: {f: f} %>
-  <% end %>
   <%= f.label :name, "都道府県"%>
-  <% if @area.present? %>
-    <%= f.collection_select(:area_id, Area.all, :id, :name, {selected: @area.id}, {class:"select-box"}) %><br>
-  <% else %>
-    <%= f.collection_select(:area_id, Area.all, :id, :name, {}, {class:"select-box"}) %><br>
-  <% end %>
+  <%= f.collection_select(:area_id, Area.all, :id, :name, {}, {class:"select-box"}) %><br>
   <%= f.label :name, "キーワード"%>
-  <%= f.text_field :keyword,placeholder: "投稿を検索する", value: params[:keyword], class:"search-input",id: "search-input" %>
+  <%= f.text_field :keyword,placeholder: "投稿を検索する", class:"search-input",id: "search-input" %>
   <%= f.submit "検索", class: "search-btn" %>
   <div class="search-result", id="search-result">
   </div>
