--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1091,15 +1091,18 @@ footer p {
 
 .search-output{
   position: fixed;
-  width: 23%;
-  font-size: 15px;
+  width: calc((100vw - 750px)/2);
   top: 400px;
-  right: 13px;
+  right: 1vw;
   box-shadow: 0 0 10px rgba(41, 41, 41, 0.2);
   background-color: white;
   box-sizing: border-box;
-  padding-left: 10px;
   padding-bottom: 10px;
+}
+
+.search-output-contents{
+  font-size: 15px;
+  padding-left: 10%;
 }
 
 .output-title{
