--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1127,10 +1127,11 @@ footer p {
 }
 
 .sort-select{
-  width: 250px;
+  width: calc((100vw - 710px)/2);
   position: fixed;
   top: 100px;
-  left: 3vw;
+  left: 0;
+  padding: 0 4vw;
 }
 
 .sort-drop{
