ユーザー投稿情報の取得

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,9 @@
 <%= render partial: "posts/search-form" %>
+
+<% if @posts != nil %>
+  <div class="contents row">
+    <% @posts.each do |post| %> 
+      <%= render partial: "posts/post", locals: { post: post } %>
+    <% end %>
+  </div>
+<% end %>
