--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -1,10 +1,14 @@
-<% if current_user.already_like?(post) %>
-  <%= link_to post_likes_path(post), method: :delete do %>
-    <i class="fas fa-heart"></i>
+<% if user_signed_in? %>
+  <% if current_user.already_like?(post) %>
+    <%= link_to post_likes_path(post.id), method: :delete, remote: true do %>
+      <span class="fas fa-heart"></span>
+    <% end %>
+  <% else %>
+    <%= link_to post_likes_path(post.id), method: :post, remote: true do %>
+      <span class="far fa-heart"></span>
+    <% end %>
   <% end %>
 <% else %>
-  <%= link_to post_likes_path(post), method: :post do %> <%# remote: true %>
-    <i class="far fa-heart"></i>
-  <% end %>
+  <span class="fas fa-heart"></span>
 <% end %>
 <%= @post.likes.count %>
