--- a/app/views/posts/update.html.erb
+++ b/app/views/posts/update.html.erb
@@ -1,5 +1,5 @@
 <div class="contents row">
-  <div class="success">
+  <div class="success" data-turbolinks="false">
     <h3>更新が完了しました。</h3>
     <%= link_to "投稿一覧へ戻る", root_path, {class: "btn"} %>
     <%= link_to "投稿詳細へ戻る", post_path(@post.id), {class: "btn"} %>
