--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,15 +5,15 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all' %>
+    <%= javascript_pack_tag 'application' %>
     <script src="https://kit.fontawesome.com/484e6509e8.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
     <header class="header">
       <div class="header__bar row ">
-        <h1 class="grid-6"><a href="/"><b>Travellers</b></a></h1>
+        <h1 class="grid-6"><a href="/" data-turbolinks="false"><b>Travellers</b></a></h1>
         <% if user_signed_in? %>
           <div class="user_nav grid-6">
           <span><%= current_user.nickname %>
@@ -24,7 +24,7 @@
               </li>
             </ul>
           </span>
-            <%= link_to "投稿する", new_post_path, class: "post" %>
+            <%= link_to "投稿する", new_post_path, class: "post", "data-turbolinks": false %>
           </div>
         <% else %>
           <div class="grid-6">
