--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -44,7 +44,7 @@
         <span>投稿日:</span>
         <%= l @post.created_at, format: :date %>
       </div>
-      <div id='likes_buttons_<%= @post.id %>'>
+      <div class="like_button">
         <%= render partial: 'likes/like', locals: {post: @post} %>
       </div>
     </div>
