--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
     <header class="header">
       <div class="header__bar row ">
         <h1 class="grid-6"><a href="/" data-turbolinks="false"><b>Travellers</b></a></h1>
+        <%= link_to "使い方", abouts_summary_path, class: "about_btn" %>
         <% if user_signed_in? %>
           <div class="user_nav grid-6">
           <span><%= current_user.nickname %>
