ボタンcss適用

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1230,3 +1230,18 @@ footer p {
   font-size: 15px;
   margin-top: 20px;
 }
+
+.about_btn {
+  position: absolute;
+  left: 300px;
+  top: 0px;
+  height: 34px;
+  width: 70px;
+  padding: 8px 5px;
+  border: black solid 1px;
+  font-size: 12px;
+  border-radius: 35px / 17px;
+  background-color: rgb(255, 237, 177);
+  text-align: center;
+  color:chocolate
+}
