--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1245,3 +1245,13 @@ footer p {
   text-align: center;
   color:chocolate
 }
+
+.about_content li {
+  list-style: inside;
+}
+
+.about_title {
+  font-size: 20px;
+  font-weight: bold;
+  color:mediumblue
+}
