--- a/app/views/abouts/summary.html.erb
+++ b/app/views/abouts/summary.html.erb
@@ -15,10 +15,18 @@
       <div class="about_title">
         ログイン/新規登録しよう！
       </div>
-      アプリの右上から、ログイン/新規登録をしましょう<br>
+      まず最初に、ログイン/新規登録をしましょう<br>
       ※テストアカウントを用意していますので、こちらを利用することも可能です<br>
         ID:test1@test1<br>
-        Pass:xxx111111
+        PASS:xxx111111
+    </div>
+
+    <div class="about_content">
+      <div class="about_title">
+        投稿しよう！
+      </div>
+      アプリの右上から、新規投稿をしましょう<br>
+
     </div>
   </div>
 
