--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1250,8 +1250,12 @@ footer p {
   list-style: inside;
 }
 
+.about_content{
+  margin-bottom: 20px;
+}
+
 .about_title {
   font-size: 20px;
   font-weight: bold;
-  color:mediumblue
+  color:mediumblue;
 }
