--- a/app/views/abouts/summary.html.erb
+++ b/app/views/abouts/summary.html.erb
@@ -28,6 +28,14 @@
       アプリの右上から、新規投稿をしましょう<br>
 
     </div>
+
+    <div class="about_content">
+      <div class="about_title">
+        いいね(♡)&コメントをしよう！
+      </div>
+      ユニークな投稿には詳細表示画面から、いいね(♡)をつけましょう！<br>
+      できれば、コメントを残しましょう！
+    </div>
   </div>
 
 </div>
