テスト情報追記

--- a/app/views/abouts/summary.html.erb
+++ b/app/views/abouts/summary.html.erb
@@ -17,8 +17,10 @@
       </div>
       まず最初に、ログイン/新規登録をしましょう<br>
       ※テストアカウントを用意していますので、こちらを利用することも可能です<br>
-        ID:test1@test1<br>
-        PASS:xxx111111
+      <ul>
+        <li>ID:test1@test1</li>
+        <li>PASS:xxx111111</li>
+      </ul>
     </div>
 
     <div class="about_content">
