デザイン調整

--- a/app/views/abouts/summary.html.erb
+++ b/app/views/abouts/summary.html.erb
@@ -2,19 +2,20 @@
   <div class="container">
     <h3><b>概要</b></h3>
     <div class="about_content">
-      旅行先のレビューアプリケーションです<br>
-      下記のことができます<br>
+      <strong>Travellers</strong>は、旅行先のレビューアプリケーションです<br>
+      主な機能としては・・・<br>
       <ul>
         <li>実際に行った旅行先をレビューする</li>
         <li>他の人のレビューにコメントや、いいね（♡）をつける</li>
         <li>レビューを検索する</li>
       </ul>
+      などがあります
     </div>
     <h3><b>使い方</b></h3>
     <div class="about_content">
       <div class="about_title">
         ログイン/新規登録しよう！
-      </div>
+      </div><br>
       まず最初に、ログイン/新規登録をしましょう<br>
       ※テストアカウントを用意していますので、こちらを利用することも可能です<br>
       <ul>
@@ -26,15 +27,16 @@
     <div class="about_content">
       <div class="about_title">
         投稿しよう！
-      </div>
-      アプリの右上から、新規投稿をしましょう<br>
-
+      </div><br>
+      ログイン後、アプリの右上『投稿する』ボタンから新規投稿をしましょう<br>
+      <%= image_tag"210522_post.gif" %>
+      ※【必須】の項目は入力しないと、送信できません。
     </div>
 
     <div class="about_content">
       <div class="about_title">
         いいね(♡)&コメントをしよう！
-      </div>
+      </div><br>
       ユニークな投稿には詳細表示画面から、いいね(♡)をつけましょう！<br>
       できれば、コメントを残しましょう！
     </div>
