いいね機能

--- a/app/views/abouts/summary.html.erb
+++ b/app/views/abouts/summary.html.erb
@@ -22,6 +22,8 @@
         <li>ID:test1@test1</li>
         <li>PASS:xxx111111</li>
       </ul>
+      <%= image_tag"210522_signup.gif" %>
+      情報入力後、『新規登録』ボタンを押すことで、新規登録が完了します<br>
     </div>
 
     <div class="about_content">
@@ -38,6 +40,7 @@
         いいね(♡)&コメントをしよう！
       </div><br>
       ユニークな投稿には詳細表示画面から、いいね(♡)をつけましょう！<br>
+      <%= image_tag"210522_like.gif" %>
       できれば、コメントを残しましょう！
     </div>
   </div>
