タイトル修正

--- a/app/views/abouts/summary.html.erb
+++ b/app/views/abouts/summary.html.erb
@@ -1,6 +1,6 @@
 <div class="contents row">
   <div class="container">
-    <h3><b>概要</b></h3>
+    <h3><b>＜概要＞</b></h3>
     <div class="about_content">
       <strong style="color: #3273dc;">Travellers</strong>は、旅行先のレビューアプリケーションです<br>
       主な機能としては・・・<br>
@@ -11,7 +11,7 @@
       </ul>
       などがあります
     </div>
-    <h3><b>使い方</b></h3>
+    <h3><b>＜使い方＞</b></h3>
     <div class="about_content">
       <div class="about_title">
         ログイン/新規登録しよう！
