--- a/app/views/abouts/summary.html.erb
+++ b/app/views/abouts/summary.html.erb
@@ -17,7 +17,8 @@
         ログイン/新規登録しよう！
       </div><br>
       まず最初に、ログイン/新規登録をしましょう<br>
-      ※テストアカウントを用意していますので、こちらを利用することも可能です<br>
+      <br>
+      ※現在テストアカウントを用意していますので、こちらでログインして利用することも可能です<br>
       <ul>
         <li>ID:test1@test1</li>
         <li>PASS:xxx111111</li>
@@ -33,7 +34,6 @@
       ログイン後、アプリの右上『投稿する』ボタンから新規投稿をしましょう<br>
       <%= image_tag"210522_post.gif" %>
       <strong style="color: #ff0000;">※必ず実際に行ったことがある場所のみ投稿してください</strong><br>
-      <%# <>※必ず実際に行ったことがある場所のみ投稿してください %>
       ※【必須】の項目は入力しないと、送信できません
     </div>
 
