--- a/app/views/abouts/summary.html.erb
+++ b/app/views/abouts/summary.html.erb
@@ -46,6 +46,15 @@
       できれば、コメントを残しましょう！
       <%= image_tag"210522_comment.gif" %>
     </div>
+
+    <div class="about_content">
+      <div class="about_title">
+        見つけよう！
+      </div><br>
+      都道府県やキーワード検索、並び替え機能で投稿を見つけましょう！<br>
+      <%= image_tag"210522_search.gif" %>
+      <%= image_tag"210522_sort.gif" %>
+    </div>
   </div>
 
 </div>
