--- a/app/views/abouts/summary.html.erb
+++ b/app/views/abouts/summary.html.erb
@@ -6,10 +6,10 @@
       主な機能としては・・・<br>
       <ul>
         <li>実際に行った旅行先をレビューする</li>
-        <li>他の人のレビューにコメントや、いいね（<span class="fas fa-heart" style="color: #3273dc;"></span>）をつける</li>
+        <li>レビューにコメントや、いいね（<span class="fas fa-heart" style="color: #3273dc;"></span>）をつける</li>
         <li>レビューを検索する</li>
       </ul>
-      などがあります
+      などができます
     </div>
     <h3><b>＜使い方＞</b></h3>
     <div class="about_content">
