--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -8,7 +8,7 @@
       <div class="weight-bold-text">
        【必須】旅先名
       </div>
-      <%= f.text_field :title, placeholder: "（記入例）富士山" %>
+      <%= f.text_field :title, placeholder: "旅先名をご記入ください" %>
 
       <div class="weight-bold-text">
        【任意】自由記入欄
