--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -3,7 +3,7 @@
       <div class="weight-bold-text">
        【必須】投稿画像(.png / .jpeg / .jpg)
       </div>
-      <%= f.file_field :image, placeholder:"gazou", id:"item-image" %>
+      <%= f.file_field :image, id:"item-image" %>
         
       <div class="weight-bold-text">
        【必須】旅先名
